build fetch feature by cordinate + fix map overlap graph design + fix collapse menu bar

--- a/geonode/geoviz/static/mapMyDrone/css/mapMyPlace.css
+++ b/geonode/geoviz/static/mapMyDrone/css/mapMyPlace.css
@@ -165,7 +165,7 @@ div.dataTables_wrapper div.dataTables_info {
     
 }
 #navbarNav  .icofont {
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: #3b5a86c8;
    
 }
